# glBaseProject

./: .gitignore  App.cpp  App.hpp  CMakeLists.txt  Camera2D.cpp  Camera2D.hpp  Color.hpp  DrawableGL.cpp  DrawableGL.hpp  FileReader.cpp  FileReader.hpp  GLErrors.hpp  MultiDrawable.cpp  MultiDrawable.hpp  README.md  Scene.hpp  Shader.cpp  Shader.hpp  Timer.hpp  Transform.hpp  Window.cpp  Window.hpp  main.cpp  moe  spdlogConfigVersion.cmake
Shaders/: Simple.frag  Simple.vert
